Fixed issue with graph going off screen

--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,6 @@ body {
 
 .site-container {
   margin: 2em 5vw;
-  width: calc(100% - 4em);
 }
 
 @media (min-width: 1000px) {
