--- a/src/pages/import/import.css
+++ b/src/pages/import/import.css
@@ -1,3 +1,4 @@
 .screenshot {
   width: 100%;
+  max-width: 500px;
 }
